# menhir

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  CHANGES  CHANGES.md  ChangeLog  GNUmakefile  HOWTO  HOWTO.md  INSTALLATION  INSTALLATION.md  LICENSE  Makefile  Makefile.image  README.md  TODO  TODO-NOT!  TODO.md  check-tarball.sh  compile-ocaml.sh  coq-menhirlib.opam  current  dune  dune-project  godi  header  lgpl-header  menhir.opam  menhirCST.opam  menhirLib.opam  menhirSdk.opam  opam  promote.sh  spec.godiva  timings.r
analysis/: analysis.r
bench/: README  (+1 more)
benchmarks/template/: dune  dune.ml  speed.ml  speed.sh
benchmarks/template/backends/: Makefile  TEMPLATE  code_inline_high.flags  code_inline_one.flags  code_short_invariant.flags
benchmarks/template/backends/code.backend/: dune
benchmarks/template/backends/code_no_commute.backend/: dune
benchmarks/template/backends/code_no_commute_no_stack_optim.backend/: dune
benchmarks/template/backends/code_no_inlining.backend/: dune
benchmarks/template/backends/code_no_stack_optim.backend/: dune
benchmarks/template/backends/old_code.backend/: dune
benchmarks/template/backends/table.backend/: dune
benchmarks/template/sentences/: dune
benchmarks/template/src/: main.ml
demos/calc-syntax-errors/: Makefile  Makefile.messages.maintenance  README.md  calc.ml  calc01.exp  calc01.in  calc02.exp  calc03.exp  calc03.in  calc04.exp  calc05.exp  calc06.exp  calc07.exp  dune  lexer.mll  parser.mly  parserMessages.messages
demos/calc-unparsing-benchmark/: Makefile  README.md  benchmark.txt  dune  main.ml
demos/calc-unparsing-variant/: AST2DCST.ml  README.md  dune  parser.ml.exp  parser.mli.exp  parser.mly  test00.exp  test00.in  test01.exp  test01.in  test02.exp  test02.in
demos/coq-syntax-errors/: .gitignore  Extraction.v  Makefile  Makefile.extr  Makefile.messages.maintenance  Parser.vy  README.md  calc.ml  calc00.in  calc01.exp  calc02.exp  calc02.in  calc03.exp  calc04.exp  calc04.in  calc05.exp  calc06.exp  calc06.in  calc07.exp  calc07.in  dune  lexer.mll  parserMessages.messages  test.sh
demos/coq-syntax-errors/extraction/: .gitignore
doc/: .gitignore  Makefile  Makefile.cfg  Makefile.in  Makefile.local  configure.ac  english.bib  fppdf.sty  local.bib  macros.tex  main.tex  manual.html  manual.tex  menhir.1  mymacros.hva  new-rule-syntax-blog-post.md  sigplanconf.hva  tree1.tex  tree2.tex  tree3.tex  update  version.tex
src/: .gitignore  .merlin  Alphabet.v  AtomicBitSet.ml  AtomicBitSet.mli  Automaton.v  AutomatonGraph.ml  Boolean.ml  Boolean.mli  BooleanWitness.ml  BooleanWitness.mli  BoundedBitSet.ml  CheckErrorTokenUsage.ml  CheckErrorTokenUsage.mli  CheckSafeParameterizedGrammar.ml  CheckSafeParameterizedGrammar.mli  CompletedNat.ml  CompletedNat.mli  CompletedNatWitness.ml  CompletedNatWitness.mli  Convert.ml  Convert.mli  Coverage.ml  DFS.mli  DWordBitSet.ml  DecodeString.mll  DependencyGraph.ml  DependencyGraph.mli  Driver.mli  Drop.ml  Drop.mli  EmitStackLang.ml  Engine.ml  Engine.mli  EngineTypes.ml  ErrorReporting.ml  ErrorReporting.mli  ErrorReports.ml  ErrorReports.mli  ExpandParameterizedGrammar.ml  (+329 more)
src/FrontEnd/: back.ml  settings.ml  settings.mli  test.ml
src/Grammar/: SentenceGenerator.ml  SentenceGenerator.mli  grammarFunctor.mli  invariant.ml  invariant.mli  lr1.ml
src/IL/: IL.ml  ILofStackLang.ml  action.mli  codeBackend.ml  codeBackend.mli  codeBits.ml  codeBits.mli  codePieces.ml  interface.ml  interface.mli  printer.ml  rawPrinter.mli  tableBackend.ml  tokenType.ml  traverse.ml
src/Misc/: CompletedNatWitness.ml  CompletedNatWitness.mli  Feat.ml  IntMap.ml  IntMap.mli  IntSet.mli  List.ml  MArray.mli  array.ml  stringMap.ml
src/StackLang/: Annotate.ml  Annotate.mli  Bindings.ml  Bindings.mli  Block.ml  Block.mli  Cell.ml  EmitStackLang.ml  EmitStackLang.mli  Final.ml  Final.mli  ILofStackLang.ml  ILofStackLang.mli  LeaveStackLang.ml  LeaveStackLang.mli  NamingConventions.ml  NeededRegisters.ml  NeededRegisters.mli  Pattern.ml  Pattern.mli  Primitive.ml  Primitive.mli  Program.ml  Program.mli  StackLang.ml  StackLang.mli  StackLangBasics.ml  StackLangBasics.mli  StackLangBuilder.ml  StackLangBuilder.mli  StackLangCheck.ml  StackLangCheck.mli  StackLangGraph.ml  StackLangGraph.mli  StackLangInline.ml  StackLangInline.mli  StackLangInterpreter.ml  StackLangInterpreter.mli  StackLangMeasure.ml  StackLangMeasure.mli  (+15 more)
src/attic/: BooleanWitness.ml  BooleanWitness.mli  CompletedNatWitness.ml  CompletedNatWitness.mli  MyHashSet.ml  MyHashtbl.ml  MyMap.mli  Seq.mli  automatonGraph.ml  dijkstra.ml  enabled_reductions.ml  heap.ml  heap.mli  minimal.ml  nonpositiveCycles.ml  reductionGraphs.ml  resizableArray.ml  resizableArray.mli
src/stage1/: dune  parser.mly
src/stage2/: dune  menhir_flags  parser.mly  parserMessages.messages
src/stage3/: dune
test/dynamic/houblix/backends/code-O2-specialize-token.backend/: dune
test/dynamic/houblix/backends/code.backend/: dune
test/dynamic/houblix/backends/code_no_commute_no_stack_optim.backend/: dune
test/dynamic/houblix/src/: AST.ml  ASTHelper.ml  dune  error.ml  hopixParser.ml.back  houblix.ml  lexer.mll  mint.ml  parser.mly  parserExpr.mly  parserTokens.mly  parserTypes.mly  prettyPrinter.ml  syntacticAnalysis.ml
test/dynamic/houblix/src/code.backend/: dune
test/dynamic/houblix/src/code_no_commute.backend/: dune
test/dynamic/houblix/src/code_no_commute_no_stack_optim.backend/: dune
test/dynamic/houblix/src/code_no_inlining.backend/: dune
test/dynamic/houblix/tests/: 01-Pretty.results  02-Sexp.results  03-Sexpbis.results  Makefile  all.results  dune  dune.auto  makelog  test.ml
test/dynamic/speed_houblix/src/: dune  hopixSyntacticSugar.mli  houblix.ml  lexer.mll  parser.mly  sentence.houblix  sentence_1000  sentence_1000.tokens  sentence_100000.tokens  sentence_200000.tokens  sentence_200000_2.tokens  simple_lexer.mll
test/static/reach/: compcert_pre_parser.exp  compcert_pre_parser.out.exp  dune  ocaml.4.13.0.err.exp  ocaml.4.13.0.flags  ocaml.4.13.0.out.exp  unreachable_transition.err.exp  unreachable_transition.mly
(+5359 files in other folders)
