name: "menhir"
opam-version: "2.0"
maintainer: "francois.pottier@inria.fr"
authors: [
  "François Pottier <francois.pottier@inria.fr>"
  "Yann Régis-Gianas <yrg@pps.univ-paris-diderot.fr>"
]
homepage: "http://gitlab.inria.fr/fpottier/menhir"
dev-repo: "git+https://gitlab.inria.fr/fpottier/menhir.git"
bug-reports: "menhir@inria.fr"
build: [
  ["dune" "build" "@install" "-j" jobs "--profile=release"]
]
install: [
  ["dune" "install" "-j" jobs]
]
depends: [
  "ocaml" {>= "4.02.3"}
  "dune" {>= "2.0.0"}
]
synopsis: "An LR(1) parser generator"
