name: "menhir"
opam-version: "2.0"
maintainer: "francois.pottier@inria.fr"
authors: [
  "François Pottier <francois.pottier@inria.fr>"
  "Yann Régis-Gianas <yrg@pps.univ-paris-diderot.fr>"
]
homepage: "http://gitlab.inria.fr/fpottier/menhir"
dev-repo: "git+https://gitlab.inria.fr/fpottier/menhir.git"
bug-reports: "https://gitlab.inria.fr/fpottier/menhir/-/issues"
license: "GPL-2.0-only"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {>= "2.8.0"}
  "menhirLib" {= version}
  "menhirSdk" {= version}
]
synopsis: "An LR(1) parser generator"
