;; Compilation flags for Menhir.

(env
  (_ (flags
    -safe-string
    -g
    -w @1..66-4-9-41-44-60
  ))
)

;; The following parsers are built by ocamlyacc.

(ocamlyacc
  sentenceParser
)

;; The following lexers are built by ocamllex.

(ocamllex
  lexer
  lineCount
  lexmli
  lexdep
  chopInlined
  sentenceLexer
  segment
  lexpointfree
)

;; The Menhir standard library "standard.mly" is embedded in the source code of
;; Menhir using the following rule. It generates a file "standard_mly.ml" with
;; contents "let contents = {|<contents of standard.mly>|}".

(rule
  (with-stdout-to standard_mly.ml
    (progn
      (echo "let contents = {|")
      (cat standard.mly)
      (echo "|}")
    )
  )
)
