(rule
 (alias benchmark)
 (deps
  ; backend/*.backend/main.exe
  backends/code.backend/main.exe
  backends/code_inline_high.backend/main.exe
  backends/code_inline_one.backend/main.exe
  backends/code_no_commute.backend/main.exe
  backends/code_no_stack_optim.backend/main.exe
  backends/code_no_inlining.backend/main.exe
  backends/code_no_commute_no_stack_optim.backend/main.exe
  backends/table.backend/main.exe
  backends/old_code.backend/main.exe
  ; sentences/*.tokens
  sentences/sentence_1000.tokens
  sentences/sentence_200000.tokens
  sentences/sentence_200000_2.tokens
  sentences/sentence_200000_3.tokens
  speed.sh
  speed.ml)
 (action
  (run bash speed.sh)))