;; -----------------------------------------------------------------------------

;; As dune cannot use the same OCaml module in two different libraries or
;; executables, we must copy some source files from a neighbor directory.

(copy_files# ../calc-unparsing/*.{ml,mli})

;; ------------------------------------------------------------------------------
;; The following declarations are used to build this benchmark.

(executable
  (name main)
  (libraries menhirLib menhirCST
             vendored_fix vendored_pprint
             core_unix.command_unix core_bench)
)
