(rule
 (deps
  (:parser ../src/parser.mly))
 (mode (fallback))
 (target sentence_1000.tokens)
 (action
  (with-stdout-to
   %{target}
   (run menhir %{parser} --provide-example))))

(rule
 (deps
  (:parser ../src/parser.mly))
 (mode (fallback))
 (target sentence_100000.tokens)
 (action
  (with-stdout-to
   ${target}
   (run
    menhir
    %{parser}
    --provide-example
    --provide-example-seed
    69009
    --example-size
    100000))))

(rule
 (deps
  (:parser ../src/parser.mly))
 (mode (fallback))
 (target sentence_200000.tokens)
 (action
  (with-stdout-to
   %{target}
   (run
    menhir
    %{parser}
    --provide-example
    --provide-example-seed
    93270
    --example-size
    200000))))

(rule
 (deps
  (:parser ../src/parser.mly))
 (mode (fallback))
 (target sentence_200000_2.tokens)
 (action
  (with-stdout-to
   %{target}
   (run
    menhir
    %{parser}
    --provide-example
    --provide-example-seed
    111314113
    --example-size
    200000))))

(rule
 (deps
  (:parser ../src/parser.mly))
 (mode (fallback))
 (target sentence_200000_3.tokens)
 (action
  (with-stdout-to
   %{target}
   (run
    menhir
    %{parser}
    --provide-example
    --provide-example-seed
    12847
    --example-size
    200000))))
