;; Compile the script [test.ml].
(executable
  (name test)
)

;; Use the script [test.ml] to generate the file [dune.auto]
;; based on the content of the directory [src].
(rule
  (target dune.auto)
  (mode promote)
  (deps (source_tree ../src))
  (action (with-stdout-to %{target} (run ./test.exe)))
)

;; Include the file [dune.auto].
(include dune.auto)

;; Add a dependency of [test_houblix] on [test] so that all of these tests
;; are executed as part of Menhir's [make test].

(alias
  (name test)
  (deps (alias test_houblix))
)
