;; Compile the script [test.ml].
(executable
  (name test)
)

;; Use the script [test.ml] to generate the files [./dune.auto.gen]
;; and [*.tests.dune.auto.gen].
(rule
  (targets
    dune.auto.gen
    01.pretty.tests.dune.auto.gen
    02.sexp.tests.dune.auto.gen
    03.sexp.tests.dune.auto.gen
  )
  (deps
    (source_tree .)
    (source_tree ../src)
    (source_tree ../backends)
  )
  (action (run ./test.exe))
)

;; Include the file [dune.auto].
(include dune.auto)

;; Building the target @depend in --auto-promote mode replaces
;; dune.auto with dune.auto.gen. This is a way of regenerating
;; dune.auto.
(rule
  (alias depend)
  (action (diff dune.auto dune.auto.gen))
)

(rule
  (alias depend)
  (action (diff 01.pretty.tests/dune.auto 01.pretty.tests.dune.auto.gen))
)

(rule
  (alias depend)
  (action (diff 02.sexp.tests/dune.auto 02.sexp.tests.dune.auto.gen))
)

(rule
  (alias depend)
  (action (diff 03.sexp.tests/dune.auto 03.sexp.tests.dune.auto.gen))
)

;; Add a dependency of [test_houblix] on [test] so that all of these tests
;; are executed as part of Menhir's [make test].

(alias
  (name test)
  (deps (alias test_houblix))
)
