(copy_files# ../../src/*.ml)

(copy_files ../../src/*.mll)

(copy_files ../../src/*.mly)

(ocamllex lexer)

(menhir
 (modules parserTokens)
 (flags --only-tokens))

(menhir
 (modules parser parserTypes parserTokens parserExpr)
 (merge_into parser)
 (infer true)
 (flags --external-tokens ParserTokens --comment))

(executable
 (name houblix)
 (libraries str pprint menhirLib sexplib unix sek)
 (preprocess
  (pps ppx_sexp_conv)))
